--- a/sampling/ideal.ipynb
+++ b/sampling/ideal.ipynb
@@ -17,11 +17,11 @@
    "source": [
     "## Ideal Sampling and Reconstruction\n",
     "\n",
-    "[Digital signal processors](https://en.wikipedia.org/wiki/Digital_signal_processor) and general purpose processors can only perform arithmetic operations within a limited number range. So far we considered continuous signals which are continuous with respect to time and its amplitude values. Such signals cannot be handled by processors in a straightforward manner. In order to obtain a digital representation of a continuous signal, a discretization has to be perfomed in both time and amplitude. The former is known as [*sampling*](https://en.wikipedia.org/wiki/Sampling_%28signal_processing%29), the latter as [*quantization*](https://en.wikipedia.org/wiki/Quantization_%28signal_processing%29). Sampling refers to the process of picking amplitude values from a continuous signal at discrete time-instants. The sampled signal is referred to as *discrete signal*. Quantization refers to the process of mapping a continuous amplitude to a countable set of amplitude values. The quantized signal is referred to as *quantized signal*. A signal which is discrete and quantized is a *digital signal*. This is illustrated in the following\n",
+    "[Digital signal processors](https://en.wikipedia.org/wiki/Digital_signal_processor) and general purpose processors can only perform arithmetic operations within a limited number range. So far we considered continuous signals which are continuous with respect to time and its amplitude values. Such signals cannot be handled by processors in a straightforward manner. In order to obtain a digital representation of a continuous signal, a discretization has to be performed both in time and amplitude. The former is known as [*sampling*](https://en.wikipedia.org/wiki/Sampling_%28signal_processing%29), the latter as [*quantization*](https://en.wikipedia.org/wiki/Quantization_%28signal_processing%29). Sampling refers to the process of picking amplitude values from a continuous signal at discrete time-instants. The sampled signal is referred to as *discrete signal*. Quantization refers to the process of mapping a continuous amplitude to a countable set of amplitude values. The quantized signal is referred to as *quantized signal*. A signal which is discrete and quantized is termed a *digital signal*. This is illustrated in the following\n",
     "\n",
     "![Sampling and quantization of signals](analog_discrete_digital.png)\n",
     "\n",
-    "Only digital signals can be handled by digital signal or general purpose processors. The sampling of signals is discussed in the following."
+    "The order of sampling and quantization can be exchanged under the assumption that both are memoryless processes. Only digital signals can be handled by digital signal or general purpose processors. The sampling of signals is discussed as a first step towards a digital signal."
    ]
   },
   {
@@ -38,7 +38,7 @@
     "x_\\text{s}(t) = \\sum_{k = - \\infty}^{\\infty} x(t) \\cdot \\delta(t - k T) = \\sum_{k = - \\infty}^{\\infty} x(k T) \\cdot \\delta(t - k T)\n",
     "\\end{equation}\n",
     "\n",
-    "where the [multiplication property](../continuous_signals/standard_signals.ipynb#Dirac-Impulse) of the Dirac impulse was used for the last equality. The sampled signal is composed from a series of equidistant Dirac impulse which are weighted by the amplitude values of the continuous signal. \n",
+    "where the [multiplication property](../continuous_signals/standard_signals.ipynb#Dirac-Impulse) of the Dirac impulse was used for the last equality. The sampled signal is composed from a series of equidistant Dirac impulse which are weighted by the amplitude values of the continuous signal taken at their time-instants. \n",
     "\n",
     "![Ideal sampling of signals](ideal_sampling.png)\n",
     "\n",
@@ -48,7 +48,7 @@
     "x_\\text{s}(t) = x(t) \\cdot \\frac{1}{T} {\\bot \\!\\! \\bot \\!\\! \\bot} \\left( \\frac{t}{T} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The process of sampling can be modeled by multipyling the continuous signal $x(t)$ with a Dirac comb. The samples $x(k T)$ for $k \\in \\mathbb{Z}$ of the continuous signal constitute the [discrete (-time) signal](https://en.wikipedia.org/wiki/Discrete-time_signal) $x[k] := x(k T)$. The question arises if and under which conditions the samples $x[k]$ fully represent the continuous signal and allow for a reconstruction. In order to investigate this, the spectrum of the sampled signal is derived in the following."
+    "The process of sampling can be modeled by multipyling the continuous signal $x(t)$ with a Dirac comb. The samples $x(k T)$ for $k \\in \\mathbb{Z}$ of the continuous signal constitute the [discrete (-time) signal](https://en.wikipedia.org/wiki/Discrete-time_signal) $x[k] := x(k T)$. The question arises if and under which conditions the samples $x[k]$ fully represent the continuous signal and allow for a reconstruction of the analog signal. In order to investigate this, the spectrum of the sampled signal is derived."
    ]
   },
   {
@@ -57,15 +57,17 @@
    "source": [
     "### Spectrum of Sampled Signal\n",
     "\n",
-    "The spectrum $X_\\text{s}(j \\omega) = \\mathcal{F} \\{ x_\\text{s}(t) \\}$ of the sampled signal $x_\\text{s}(t)$ is derived by applying the [multiplication theorem](../fourier_transform/theorems.ipynb#Multiplication-Theorem) to above representation of the sampled signal by the Dirac comb\n",
+    "The spectrum $X_\\text{s}(j \\omega) = \\mathcal{F} \\{ x_\\text{s}(t) \\}$ of the sampled signal $x_\\text{s}(t)$ is derived by applying the [multiplication theorem](../fourier_transform/theorems.ipynb#Multiplication-Theorem) to the representation of the sampled signal using the Dirac comb\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
     "X_\\text{s}(j \\omega) &= \\frac{1}{2 \\pi} X(j \\omega) * {\\bot \\!\\! \\bot \\!\\! \\bot} \\left( \\frac{\\omega}{\\omega_\\text{s}} \\right) \\\\\n",
     "&= \\frac{1}{2 \\pi} X(j \\omega) * \\frac{2 \\pi}{T} \\sum_{\\mu = - \\infty}^{\\infty} \\delta(\\omega - \\mu \\omega_\\text{s}) \\\\\n",
     "&= \\frac{1}{T} \\sum_{\\mu = - \\infty}^{\\infty} X \\left(j (\\omega - \\mu \\omega_\\text{s}) \\right)\n",
-    "\\end{align}\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
     "\n",
-    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ denotes the Fourier transform of the continuous signal, $\\omega_\\text{s} = 2 \\pi \\, f_\\text{s}$ the angluar sampling frequency and $f_\\text{s} = \\frac{1}{T}$ the sampling frequency. The second equality results from the definition of the Dirac comb and the scaling property of the Dirac impulse, the third from its sifting property. The spectrum of the sampled signal consists of a superposition of shifted copies of the spectrum of the continuous signal. The resulting spectrum is periodic with a period of $\\omega_\\text{s}$. It can be concluded, that equidistant sampling results in a repetition of the spectrum of the continuous signal.\n",
+    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ denotes the Fourier transform of the continuous signal, $\\omega_\\text{s} = 2 \\pi \\, f_\\text{s}$ the angluar sampling frequency and $f_\\text{s} = \\frac{1}{T}$ the sampling frequency. The second equality results from the definition of the Dirac comb and the scaling property of the Dirac impulse, the third from its sifting property. The spectrum of the sampled signal consists of a superposition of shifted copies of the spectrum of the continuous signal. The resulting spectrum is periodic with a period of $\\omega_\\text{s}$. It can be concluded, that equidistant sampling generates repetitions of the spectrum of the continuous signal.\n",
     "\n",
     "The spectrum $X_\\text{s}(j \\omega)$ of a sampled signal is illustrated at the example of a real-valued low-pass signal. A low-pass signal $x(t)$ is a signal with band-limited spectrum\n",
     "\n",
@@ -73,7 +75,7 @@
     "X(j \\omega) = 0 \\qquad \\text{for } |\\omega| > \\omega_\\text{u}\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\omega_\\text{u}$ denotes its upper frequency limit. The following illustration shows the generic spectrum of a continuous real-valued low-pass signal\n",
+    "where $\\omega_\\text{u}$ denotes its upper frequency limit. For ease of illustration, the generic spectrum of a continuous real-valued low-pass signal is depicted by a triangle-shaped spectrum\n",
     "\n",
     "![Spectrum of continuous low-pass signal](spectrum_lowpass_signal.png)\n",
     "\n",
@@ -81,7 +83,10 @@
     "\n",
     "![Spectrum of sampled low-pass signal](spectrum_sampled_signal.png)\n",
     "\n",
-    "It can be concluded from the illustration, that the shifted copies of $X(j \\omega)$ do not overlap if $\\omega_\\text{u} < \\frac{\\omega_\\text{s}}{2}$. For $|\\omega| < \\omega_\\text{u}$ the spectrum of the continuous signal is not affected by overlapping in this case. However, for $\\omega_\\text{u} > \\frac{\\omega_\\text{s}}{2}$ overlapping occurs which changes the spectrum of the continuous signal within $|\\omega| < \\omega_\\text{u}$."
+    "It can be concluded from the illustration, that \n",
+    "\n",
+    "* the shifted copies of $X(j \\omega)$ do not overlap if $\\omega_\\text{u} < \\frac{\\omega_\\text{s}}{2}$. For $|\\omega| < \\omega_\\text{u}$ the spectrum of the continuous signal is not affected by overlapping\n",
+    "* for $\\omega_\\text{u} > \\frac{\\omega_\\text{s}}{2}$ overlapping occurs which changes the spectrum of the continuous signal within $|\\omega| < \\omega_\\text{u}$"
    ]
   },
   {
@@ -106,7 +111,7 @@
     "h(t) = \\text{sinc} \\left( \\frac{\\pi t}{T} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The reconstructed signal $y(t)$ is given by convolving the sampled signal $x_\\text{s}(t)$ with the impulse response of the low-pass filter. This results in\n",
+    "The reconstructed signal $y(t)$ is given by convolving the sampled signal $x_\\text{s}(t)$ with the impulse response of the low-pass filter. This yields\n",
     "\n",
     "\\begin{align}\n",
     "y(t) &= x_\\text{s}(t) * h(t) \\\\\n",
@@ -127,7 +132,7 @@
     "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "The amplitude values in between the sampling positions $t = k T$ are given by superimposing the shifted sinc functions. The process of computing values in between given sampling points is termed [*interpolation*](https://en.wikipedia.org/wiki/Interpolation). The reconstruction of the sampled signal is performed by interpolating the discrete amplitude values $x(k T)$. The sinc function is the optimal interpolator in this context."
+    "The amplitude values in between the sampling positions $t = k T$ are given by superimposing the shifted sinc functions. The process of computing values in between given sampling points is termed [*interpolation*](https://en.wikipedia.org/wiki/Interpolation). The reconstruction of the sampled signal is performed by interpolating the discrete amplitude values $x(k T)$. The sinc function is the optimal interpolator for band-limited signals."
    ]
   },
   {
@@ -136,7 +141,7 @@
    "source": [
     "### Aliasing\n",
     "\n",
-    "So far the case was considered when no overlaps occur in the spectrum of the sampled signal. This is the case when the upper frequency limit $\\omega_\\text{u}$ of the real-valued low-pass signal is lower than $\\frac{\\omega_\\text{s}}{2}$. Here a perfect reconstruction of the continuous signal $x(t)$ from its discrete counterpart $x[k]$ is possible. However when this condition is not fulfilled, the repetitions of the spectrum of the continuous signal overlap. This is illustrated in the following\n",
+    "So far the case was discussed when no overlaps occur in the spectrum of the sampled signal. Hence when the upper frequency limit $\\omega_\\text{u}$ of the real-valued low-pass signal is lower than $\\frac{\\omega_\\text{s}}{2}$. Here a perfect reconstruction of the continuous signal $x(t)$ from its discrete counterpart $x[k]$ is possible. However when this condition is not met, the repetitions of the spectrum of the continuous signal overlap. This is illustrated in the following\n",
     "\n",
     "![Aliasing](aliasing.png)\n",
     "\n",
@@ -176,9 +181,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ideal Sampling and Reconstruction of a Cosine Signal\n",
+    "### Example: Ideal Sampling and Reconstruction of a Cosine Signal\n",
     "\n",
-    "The ideal sampling and reconstruction of a signal $x(t)$ is illustrated in the following. Two functions are defined which ideally sample the signal $x(t)$ at equidistant time-instants $t = k T$ and compute the reconstructed signal $y(t)$ from the samples by an ideal low-pass."
+    "The ideal sampling and reconstruction of an analog signal $x(t)$ is illustrated in the following. For ease of illustration a cosine signal $x(t) = \\cos(\\omega_0 t)$ is considered. First, two `Python` functions are defined which ideally sample the signal $x(t)$ at equidistant time-instants $t = k T$ and compute the reconstructed signal $y(t)$ from the samples by applying an ideal low-pass."
    ]
   },
   {
@@ -197,14 +202,17 @@
     "t = sym.symbols('t', real=True)\n",
     "k = sym.symbols('k', integer=True)\n",
     "\n",
-    "# faster than sympy.sinc\n",
+    "\n",
     "def sinc(x):\n",
+    "    # faster than sympy.sinc\n",
     "    return sym.sin(x)/x\n",
+    "\n",
     "\n",
     "def ideal_sampling(x, k, w_s):\n",
     "    kappa = sym.symbols('kappa')\n",
     "    xs = sym.lambdify(kappa, x.subs(t, kappa * 2 * sym.pi / w_s))\n",
     "    return [xs(kappa) for kappa in k]\n",
+    "\n",
     "\n",
     "def ideal_reconstruction(xs, k, w_s):\n",
     "    T = 2*sym.pi/w_s\n",
@@ -238,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the continuous signal to be sampled and reconstructed is defined and plotted. For ease of illustration a cosine signal $x(t) = \\cos(\\omega_0 t)$ with $\\omega_0 = 5$ is used in the following."
+    "Now the continuous signal $x(t) = \\cos(\\omega_0 t)$ to be sampled and reconstructed is defined and plotted for $\\omega_0 = 5$."
    ]
   },
   {
@@ -321,7 +329,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Derive the spectrum of the reconstructed signal for the sampling of $x = \\cos(\\omega_0 t)$ with sampling frequency $\\omega_s$ by computing \n",
+    "* Derive the spectrum of the reconstructed signal for the sampling of $x = \\cos(\\omega_0 t)$ with sampling frequency $\\omega_s$ by calculating \n",
     "\n",
     "    * the spectrum $X(j \\omega)$ of the continuous signal\n",
     "    * the spectrum $X_\\text{s}(j \\omega)$ of the sampled signal\n",
@@ -362,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
