Fixed computation of example

--- a/laplace_transform/theorems.ipynb
+++ b/laplace_transform/theorems.ipynb
@@ -118,7 +118,7 @@
     "w0 = sym.symbols('omega0', positive=True)\n",
     "\n",
     "x = sym.integrate(sym.cos(w0*tau) * sym.sin(w0*(t-tau)), (tau, 0, t))\n",
-    "x = x.doit()\n",
+    "x = sym.simplify(x)\n",
     "x"
    ]
   },
@@ -479,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
