convolution: alternative graphics interpretation added, minor edits in text and examples, re-run examples for new style,

--- a/systems_time_domain/impulse_response.ipynb
+++ b/systems_time_domain/impulse_response.ipynb
@@ -49,7 +49,7 @@
     "y(t) = \\int_{-\\infty}^{\\infty}  x(\\tau) \\cdot h(t-\\tau) \\; d \\tau \n",
     "\\end{equation}\n",
     "\n",
-    "Due to its relevance in the theory of LTI systems, this operation is explicitly termed as [*convolution*](https://en.wikipedia.org/wiki/Convolution). It is commonly abbreviated by $*$, hence for above integral we get $y(t) = x(t) * h(t)$.\n",
+    "Due to its relevance in the theory of LTI systems, this operation is explicitly termed as [*convolution*](https://en.wikipedia.org/wiki/Convolution). It is commonly abbreviated by $*$, hence for above integral we get $y(t) = x(t) * h(t)$. In some books the mathematically more precise nomenclature $y(t) = (x*h)(t)$ is used, since $*$ is the operator acting on the two signals $x$ and $h$ with regard to time $t$.\n",
     "\n",
     "In can be concluded that the properties of an LTI system are entirely characterized by its impulse response. The response $y(t)$ of a system to an arbitrary input signal $x(t)$ is given by the convolution of the input signal $x(t)$ with its impulse response $h(t)$."
    ]
@@ -82,15 +82,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t = sym.symbols('t', real=True)\n",
     "x = sym.Function('x')(t)\n",
     "y = sym.Function('y')(t)\n",
     "\n",
-    "ode = sym.Eq(y + y.diff(t) , x)\n",
+    "ode = sym.Eq(y + y.diff(t), x)\n",
     "ode"
    ]
   },
@@ -108,7 +108,8 @@
    "outputs": [],
    "source": [
     "solution = sym.dsolve(ode.subs(x, sym.exp(-2*t)*sym.Heaviside(t)))\n",
-    "integration_constants = sym.solve( (solution.rhs.limit(t, 0, '-'), solution.rhs.diff(t).limit(t, 0, '-')), 'C1' )\n",
+    "integration_constants = sym.solve(\n",
+    "    (solution.rhs.limit(t, 0, '-'), solution.rhs.diff(t).limit(t, 0, '-')), 'C1')\n",
     "y1 = solution.subs(integration_constants)\n",
     "y1"
    ]
@@ -144,7 +145,8 @@
    "source": [
     "h = sym.Function('h')(t)\n",
     "solution2 = sym.dsolve(ode.subs(x, sym.DiracDelta(t)).subs(y, h))\n",
-    "integration_constants = sym.solve( (solution2.rhs.limit(t, 0, '-'), solution2.rhs.diff(t).limit(t, 0, '-')), 'C1' )\n",
+    "integration_constants = sym.solve((solution2.rhs.limit(\n",
+    "    t, 0, '-'), solution2.rhs.diff(t).limit(t, 0, '-')), 'C1')\n",
     "h = solution2.subs(integration_constants)\n",
     "h"
    ]
@@ -186,7 +188,7 @@
    "source": [
     "tau = sym.symbols('tau', real=True)\n",
     "\n",
-    "y2 = sym.integrate(sym.exp(-2*tau) * h.rhs.subs(sym.Heaviside(t), 1).subs(t, t-tau), (tau, 0, t))\n",
+    "y2 = sym.integrate(sym.exp(-2*tau) * h.rhs.subs(t, t-tau), (tau, 0, t))\n",
     "y2"
    ]
   },
@@ -203,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(y2, (t,0,10), ylabel=r'$y(t)$');"
+    "sym.plot(y2, (t,-1,10), ylabel=r'$y(t)$');"
    ]
   },
   {
@@ -245,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
