--- a/systems_time_domain/spring_pendulum_analysis.ipynb
+++ b/systems_time_domain/spring_pendulum_analysis.ipynb
@@ -109,8 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, m, c, k = sym.symbols('t m c k', real=True)\n",
@@ -151,7 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_h = sym.dsolve(ode.subs(x, sym.DiracDelta(t)).subs(y, sym.Function('h')(t)))\n",
+    "solution_h = sym.dsolve(\n",
+    "    ode.subs(x, sym.DiracDelta(t)).subs(y, sym.Function('h')(t)))\n",
     "solution_h"
    ]
   },
@@ -168,7 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integration_constants = sym.solve( (solution_h.rhs.limit(t, 0, '-'), solution_h.rhs.diff(t).limit(t, 0, '-')), ['C1', 'C2'] )\n",
+    "integration_constants = sym.solve((solution_h.rhs.limit(\n",
+    "    t, 0, '-'), solution_h.rhs.diff(t).limit(t, 0, '-')), ['C1', 'C2'])\n",
     "integration_constants"
    ]
   },
@@ -202,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(h.rhs.subs(mck), (t,0,12), ylabel=r'h(t)');"
+    "sym.plot(h.rhs.subs(mck), (t, 0, 12), ylabel=r'h(t)');"
    ]
   },
   {
@@ -231,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The transfer characteristics of an LTI system for harmonic exponential signals $e^{j \\omega} = \\cos(\\omega t) + j \\sin(\\omega t)$ are of special interest in the analysis of resonating systems. It can be derived from $H(s)$ by substituting the complex frequency $s$ with $s = j \\omega$. The resulting transfer function $H(j \\omega)$ provides the attenuation and phase the system adds to a harmonic input signal."
+    "The transfer characteristic of an LTI system for harmonic exponential signals $e^{j \\omega t} = \\cos(\\omega t) + j \\sin(\\omega t)$ is of special interest in the analysis of resonating systems. It can be derived from $H(s)$ by substituting the complex frequency $s$ with $s = j \\omega$. The resulting transfer function $H(j \\omega)$ provides the attenuation and phase the system adds to an harmonic input signal."
    ]
   },
   {
@@ -259,7 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(abs(Hjw.subs(mck)), (w, -15, 15), ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
+    "sym.plot(abs(Hjw.subs(mck)), (w, -15, 15),\n",
+    "         ylabel=r'$|H(j \\omega)|$', xlabel=r'$\\omega$');"
    ]
   },
   {
@@ -326,7 +329,8 @@
    "outputs": [],
    "source": [
     "phi = sym.arg(Hjw)\n",
-    "sym.plot(phi.subs(mck), (w, -15, 15), ylabel=r'$\\varphi(j \\omega)$', xlabel=r'$\\omega$');"
+    "sym.plot(phi.subs(mck), (w, -15, 15),\n",
+    "         ylabel=r'$\\varphi(j \\omega)$', xlabel=r'$\\omega$');"
    ]
   },
   {
@@ -408,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
