--- a/systems_time_domain/eigenfunctions.ipynb
+++ b/systems_time_domain/eigenfunctions.ipynb
@@ -25,7 +25,7 @@
     "y(t - \\tau) = \\mathcal{H}\\{ x(t-\\tau) \\} = \\mathcal{H}\\{ e^{-s \\tau} \\cdot e^{s t}  \\}\n",
     "\\end{equation}\n",
     "\n",
-    "due to the assumed linearity of the system this can be reformulated as\n",
+    "due to the implied shift-invariance. Considering the implied linearity this can be reformulated as\n",
     "\n",
     "\\begin{equation}\n",
     "y(t - \\tau) =  e^{-s \\tau} \\cdot \\mathcal{H}\\{ e^{s t}  \\} = e^{-s \\tau} \\cdot y(t)\n",
@@ -44,7 +44,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "An LTI system whose input/output relation is given by the following inhomogeneous linear ordinary differential equation (ODE) with constant coefficients is considered\n",
+    "An LTI system whose input/output relation is given by the following inhomogeneous linear ordinary differential equation (ODE) with constant coefficients is investigated\n",
     "\n",
     "\\begin{equation}\n",
     "a_0 y(t) + a_1 \\frac{d y(t)}{dt} + a_2 \\frac{d^2 y(t)}{dt^2} = x(t)\n",
@@ -59,17 +59,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, s, a0, a1, a2 = sym.symbols('t s a:3')\n",
     "x = sym.exp(s * t)\n",
     "y = sym.Function('y')(t)\n",
     "\n",
-    "ode = sym.Eq(a0*y + a1*y.diff(t) + a2*y.diff(t,2), x)\n",
+    "ode = sym.Eq(a0*y + a1*y.diff(t) + a2*y.diff(t, 2), x)\n",
     "solution = sym.dsolve(ode)\n",
-    "solution.subs({'C1': 0, 'C2' : 0})"
+    "solution.subs({'C1': 0, 'C2': 0})"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "source": [
     "## Transfer Function\n",
     "\n",
-    "The complex eigenvalue $\\lambda$ characterizes the properties of the transfer of a complex exponential signal $e^{st}$ with complex frequency $s$ through an LTI system. It is commonly termed as [*transfer function*](https://en.wikipedia.org/wiki/Transfer_function) and denoted by $H(s)=\\lambda(s)$. Using this definition, the output signal $y(t)$ of an LTI system for a complex exponential signal at the input reads\n",
+    "The complex eigenvalue $\\lambda$ constitutes the weight a complex exponential signal $e^{st}$ with complex frequency $s$ experiences when passing through an LTI system. It is commonly termed as [*transfer function*](https://en.wikipedia.org/wiki/Transfer_function) and denoted by $H(s)=\\lambda(s)$. Using this definition, the output signal $y(t)$ of an LTI system for a complex exponential signal at the input reads\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\mathcal{H} \\{ e^{st} \\} = H(s) \\cdot e^{st}\n",
@@ -178,7 +178,7 @@
    "source": [
     "## Link between Transfer Function and Impulse Response\n",
     "\n",
-    "In order to establish the link between the transfer function $H(s)$ and the impulse response $h(t)$ the output signal $y(t) = \\mathcal{H} \\{ x(t) \\}$ of an LTI system with input signal $x(t)$ is considered. It is given by convolving the input signal with the impulse response\n",
+    "In order to establish a link between the transfer function $H(s)$ and the impulse response $h(t)$, the output signal $y(t) = \\mathcal{H} \\{ x(t) \\}$ of an LTI system with input signal $x(t)$ is considered. It is given by convolving the input signal with the impulse response\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = x(t) * h(t) = \\int_{-\\infty}^{\\infty} x(t-\\tau) \\cdot h(\\tau) \\; d\\tau\n",
@@ -190,7 +190,7 @@
     "H(s) \\cdot e^{st} = \\int_{-\\infty}^{\\infty} e^{st} e^{-s \\tau} \\cdot h(\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
-    "which after rearranging terms results in\n",
+    "which after canceling $e^{s t}$ results in\n",
     "\n",
     "\\begin{equation}\n",
     "H(s) = \\int_{-\\infty}^{\\infty} h(\\tau) \\cdot e^{-s \\tau}  \\; d\\tau\n",
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
