--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "h3 = h2.subs(tau, tau-t)\n",
-    "\n",
+    "# h3 = h1.subs(tau, -tau+t)  # this handling might be more obvious\n",
     "plot_signals(tau, x1, h3.subs(t, -2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
