--- a/systems_time_domain/convolution2.ipynb
+++ b/systems_time_domain/convolution2.ipynb
@@ -87,13 +87,13 @@
     "\n",
     "* 1. Substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$, yielding $x(\\tau)$ and $h(\\tau)$ over $\\tau$, i.e. signals are the same only defined over time variable $\\tau$.\n",
     "\n",
-    "* 2. Shift $h(\\tau)$ by $t$ to yield $h(\\tau-t)$, delayed for $t>0$, leading for $t<0$ as discussed before in signal characteristic notebook.\n",
+    "* 2. Shift $h(\\tau)$ by $t$ to yield $h(\\tau-t)$, delayed for $t>0$, leading for $t<0$ as discussed before in continuous signal operations notebook.\n",
     "\n",
     "* 3. Create $h(-(\\tau-t)) = h(t-\\tau)$, which is mirroring the signal along vertical axis at the value $t$.\n",
     "\n",
     "* 4. Calculate the convolution integral for all overlapping sections of $x(\\tau)$ and $h(t-\\tau)$. This yields the specific convolution result at specified $t$ and constitutes the area of the overlapping.\n",
     "\n",
-    "Perform steps 1. to 4. for all $t$ - at least for all $t$ where overlapping in step. 4 occurs - to obtain the full convolution result.\n",
+    "Perform 1st to 4th step for all $t$ - at least for all $t$ where overlapping occurs in the 4th step - to obtain the full convolution result.\n",
     "\n",
     "The graphical interpretation of these operations is illustrated in the remainder by an example. "
    ]
@@ -124,7 +124,7 @@
     "import sympy as sym\n",
     "sym.init_printing()\n",
     "\n",
-    "t, tau, t1 = sym.symbols('t tau t1', real=True)"
+    "t, tau = sym.symbols('t tau', real=True)"
    ]
   },
   {
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "h = sym.exp(-t) * sym.Heaviside(t)\n",
-    "x = rect(t - 1/2)\n",
+    "x = rect(t-1/2)\n",
     "\n",
     "plot_signals(t, x, h, r'$h(t)$, $x(t)$', r'$t$')"
    ]
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **first step** is to substitute $t$ by $\\tau$ to yield $h(\\tau)$ and $x(\\tau)$. Note, the horizontal axis of the plot represents now $\\tau$"
+    "The **first step** is to substitute $t$ by $\\tau$ to yield $h(\\tau)$ and $x(\\tau)$. Note, the horizontal axis of the plot represents now $\\tau$."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **second step** is to shift $h(\\tau)$ to yield $h(\\tau-t)$, in the example below $t=-2$, thus $h(\\tau-t)$ is now leading compared to $x(\\tau)$."
+    "The **second step** is to shift $h(\\tau)$ to yield $h(\\tau-t)$, in the example below $t=-2$ is chosen, thus $h(\\tau-t)$ is now leading compared to $h(\\tau)$."
    ]
   },
   {
@@ -222,9 +222,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h3 = h1.subs(tau, -(tau-t1))\n",
+    "h3 = h1.subs(tau, -(tau-t))\n",
     "\n",
-    "plot_signals(tau, x1, h3.subs(t1,-2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+    "plot_signals(tau, x1, h3.subs(t,-2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -234,9 +234,9 @@
     "It now becomes obvious that we have to consider four cases with respect to the overlap of $h(t-\\tau)$ and $x(\\tau)$\n",
     "\n",
     "1. $t<0$: no overlap\n",
-    "2. $0 \\leq t < 1$: partial overlap\n",
-    "3. $t = 1$: most overlap\n",
-    "4. $1 < t < \\infty$: partial overlap"
+    "2. $0 \\leq t < 1$: partial overlap (with increasing area)\n",
+    "3. $t = 1$: partial overlap (with largest area)\n",
+    "4. $1 < t < \\infty$: partial overlap (with decreasing area) "
    ]
   },
   {
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "# no overlap\n",
-    "plot_signals(tau, x1, h3.subs(t1,-0.25), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+    "plot_signals(tau, x1, h3.subs(t,-0.25), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "# partial overlap\n",
-    "plot_signals(tau, x1, h3.subs(t1,0.25), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+    "plot_signals(tau, x1, h3.subs(t,+0.25), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -265,18 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# most overlap\n",
-    "plot_signals(tau, x1, h3.subs(t1,1), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# partial overlap\n",
-    "plot_signals(tau, x1, h3.subs(t1,2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+    "# partial overlap: most overlap\n",
+    "plot_signals(tau, x1, h3.subs(t,1), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -286,7 +276,7 @@
    "outputs": [],
    "source": [
     "# partial overlap\n",
-    "plot_signals(tau, x1, h3.subs(t1,4), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+    "plot_signals(tau, x1, h3.subs(t,2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -296,14 +286,35 @@
    "outputs": [],
    "source": [
     "# partial overlap\n",
-    "plot_signals(tau, x1, h3.subs(t1,6), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+    "plot_signals(tau, x1, h3.subs(t,4), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# partial overlap\n",
+    "plot_signals(tau, x1, h3.subs(t,6), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **fourth step**, the evaluation of the convolution integrals for the four cases is left open as an exercise. Note, since in the first case no overlap occurs $y(t) = 0$ for $t<0$."
+    "The **fourth step**, the analytic evaluation of the convolution integrals for the four cases is left open as an exercise. \n",
+    "The result is plotted below. Note, since in the first case no overlap occurs $y(t) = 0$ for $t<0$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = sym.integrate(h.subs(t,t-tau) * x.subs(t, tau), (tau, 0, t))\n",
+    "sym.plot(y, (t,0,6), ylabel=r'$y(t)$');"
    ]
   },
   {
@@ -334,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
