Various edits, re-run examples

--- a/continuous_signals/standard_signals.ipynb
+++ b/continuous_signals/standard_signals.ipynb
@@ -44,7 +44,7 @@
     "* constantly one for $\\sigma = 0$,\n",
     "* exponentially growing over time for $\\sigma > 0$,\n",
     "\n",
-    "and vice-versa for $t<0$. The complex exponential signal is used to model harmonic signals with constant or exponentially decreasing or increasing amplitude."
+    "and vice-versa for $t<0$. The complex exponential signal is used to model harmonic signals with constant or exponentially decreasing/increasing amplitude."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The following example illustrates the complex exponential signal and its parameters. The Python module [SymPy](http://docs.sympy.org/latest/index.html) is used for this purpose. It provides functionality for symbolic variables and functions as well as their calculus. The required symbolic variables need to be defined explicitly before usage. In the example $t$, $\\omega$ and $\\sigma$ are defined as real-valued symbolic variables, followed by the definition of the exponential signal."
+    "The following example illustrates the complex exponential signal and its parameters. The Python module [SymPy](http://docs.sympy.org/latest/index.html) is used for this purpose. It provides functionality for symbolic variables and functions, as well as their calculus. The required symbolic variables need to be defined explicitly before usage. In the example $t$, $\\omega$ and $\\sigma$ are defined as real-valued symbolic variables, followed by the definition of the exponential signal."
    ]
   },
   {
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, sigma, omega = sym.symbols('t sigma omega', real=True)\n",
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now specific values for the complex frequency $s = \\sigma + j \\omega$ are considered for illustration. A new signal is defined by substituting both $\\sigma$ and $\\omega$ with specific values. The real and imaginary part of the signal is plotted for illustration."
+    "Now specific values for the complex frequency $s = \\sigma + j \\omega$ are considered for illustration. For this purpose a new signal is defined by substituting both $\\sigma$ and $\\omega$ with specific values. The real and imaginary part of the signal is plotted for illustration."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = x.subs({omega: 10, sigma : -.1})\n",
+    "y = x.subs({omega: 10, sigma: -.1})\n",
     "\n",
     "sym.plot(sym.re(y), (t, 0, 2*sym.pi), ylabel=r'Re{$e^{st}$}')\n",
     "sym.plot(sym.im(y), (t, 0, 2*sym.pi), ylabel=r'Im{$e^{st}$}');"
@@ -97,7 +97,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Try out other values for `omega` and `sigma` to create signals with increasing/constant/decreasing amplitude and different angular frequencies."
+    "* Try other values for `omega` and `sigma` to create signals with increasing/constant/decreasing amplitudes and different angular frequencies."
    ]
   },
   {
@@ -106,7 +106,7 @@
    "source": [
     "### Dirac Impulse\n",
     "\n",
-    "The Dirac impulse is one of the most important signals in the theory of signals and systems. It is used for the characterization of LTI systems and the modeling of impulse-like signals. The Dirac impulse is defined by way of the [Dirac delta function](https://en.wikipedia.org/wiki/Dirac_delta_function) which is not a function in the conventional sense. It is a generalized function or *distribution*. The Dirac impulse is denoted as $\\delta(t)$. The Dirac delta function is defined by its effect on other functions. A rigorous treatment is beyond the scope of this course material. Please refer to the literature for a detailed discussion of the mathematical foundations of the Dirac delta distribution. Fortunately for its application in signal processing it is suitable to consider only certain properties. The most relevant ones are\n",
+    "The Dirac impulse is one of the most important signals in the theory of signals and systems. It is used for the characterization of LTI systems and the modeling of impulse-like signals. The Dirac impulse is defined by way of the [Dirac delta function](https://en.wikipedia.org/wiki/Dirac_delta_function) which is not a function in the conventional sense. It is a generalized function or *distribution*. The Dirac impulse is denoted as $\\delta(t)$. The Dirac delta function is defined by its effect on other functions. A rigorous treatment is beyond the scope of this course material. Please refer to the literature for a detailed discussion of the mathematical foundations of the Dirac delta distribution. Fortunately it is suitable to consider only certain properties for its application in signal processing. The most relevant ones are\n",
     "\n",
     "1. **Sifting property**\n",
     "    \\begin{equation}\n",
@@ -136,15 +136,16 @@
     "    \\int_{-\\infty}^{\\infty} \\frac{d \\delta(t)}{dt} \\cdot x(t) \\; dt = - \\frac{d x(t)}{dt} \\bigg\\vert_{t = 0}\n",
     "    \\end{equation}\n",
     "\n",
-    "It is important to note that the product $\\delta(t) \\cdot \\delta(t)$ of two Dirac impulses is not defined.\n",
-    "\n",
     "6. **Convolution**\n",
-    "\n",
-    "    Although we did not introduce the concept of the signal processing operation [convolution](https://en.wikipedia.org/wiki/Convolution) at this point yet, it is worth to add a further fundamental characteristics already here: the Dirac delta function constitutes the neutral element of the convolution\n",
+    "    \n",
+    "    Generalization of the sifting property yields\n",
     "    \\begin{equation}\n",
-    "    x(t) = x(t)*\\delta(t)\n",
+    "    \\int_{-\\infty}^{\\infty} \\delta(\\tau) \\cdot x(t - \\tau)  \\, d\\tau = x(t)\n",
     "    \\end{equation}\n",
-    "    denoting the convolution operator $*$ "
+    "    \n",
+    "    This operation is known as [convolution](https://en.wikipedia.org/wiki/Convolution) and will be introduced later in more detail. It may be concluded already here that the Dirac delta function constitutes the neutral element of the convolution.\n",
+    "\n",
+    "It is important to note that the product $\\delta(t) \\cdot \\delta(t)$ of two Dirac impulses is not defined."
    ]
   },
   {
@@ -204,7 +205,7 @@
     "\\epsilon(t) = \\begin{cases} 0 & t<0 \\\\  \\frac{1}{2} & t=0 \\\\ 1 & t > 0 \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that alternative definitions exist, which differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal is used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
+    "Note that alternative definitions exist, which differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal may be used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
     "\n",
     "\\begin{equation}\n",
     "\\epsilon(t) = \\int_{-\\infty}^{t} \\delta(\\tau) \\; d\\tau\n",
@@ -272,9 +273,9 @@
     "\\text{rect}(t) = \\begin{cases} 1 & |t| < \\frac{1}{2} \\\\ \\frac{1}{2} & |t| = \\frac{1}{2} \\\\ 0 & |t| > \\frac{1}{2} \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "The time limits and amplitude are chosen such that the rectangular area is $1$.\n",
+    "Its time limits and amplitude are chosen such that the area under the function is $1$.\n",
     "\n",
-    "Note that alternative definitions exist, which differ with respect to the value of $\\text{rect}(t)$ at $t = \\pm \\frac{1}{2}$. The rectangular signal is used to represent a signal which is switched on for a limited period of time or has finite duration. The rectangular signal can be related to the Heaviside signal by\n",
+    "Note that alternative definitions exist, which differ with respect to the value of $\\text{rect}(t)$ at $t = \\pm \\frac{1}{2}$. The rectangular signal is used to represent a signal which has finite duration, respectively is switched on for a limited period of time. The rectangular signal can be related to the Heaviside signal by\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{rect}(t) = \\epsilon \\left(t + \\frac{1}{2} \\right) - \\epsilon \\left(t - \\frac{1}{2} \\right)\n",
@@ -339,13 +340,13 @@
     "|x(t)| = x(t) \\cdot \\text{sgn}(x(t))\n",
     "\\end{equation}\n",
     "\n",
-    "It is related to the Heaviside function by\n",
+    "It is related to the Heaviside signal by\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{sgn}(t) = 2 \\cdot \\epsilon(t) - 1\n",
     "\\end{equation}\n",
     "\n",
-    "when following the above definition $\\epsilon(t=0)=\\frac{1}{2}$."
+    "when following above definition with $\\epsilon(0)=\\frac{1}{2}$."
    ]
   },
   {
