--- a/continuous_signals/operations.ipynb
+++ b/continuous_signals/operations.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Elementary Operations\n",
     "\n",
-    "Operations like superposition, temporal shifting and scaling are used to construct signals with a more complex structure than the previously introduced [standard signals](standard_signals.ipynb). A set of elementary operations is introduced that are frequently used in signal processing."
+    "Operations like superposition, temporal shifting and scaling are used to construct signals with a more complex structure than the previously introduced [standard signals](standard_signals.ipynb). A set of elementary operations are introduced that are frequently used in signal processing."
    ]
   },
   {
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t = sym.symbols('t', real=True)\n",
@@ -63,7 +63,7 @@
     "\n",
     "x = A*sym.cos(omA*t) + B*sym.cos(omB*t)\n",
     "\n",
-    "sym.plot(x, (t, -5, 5), ylim=[-1.2, 1.2], ylabel=r'$x(t)$');"
+    "sym.plot(x, (t, -5, 5), ylim=[-1.2, 1.2], ylabel=r'$x(t)$')"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The following example illustrates the temporal scaling of the staircase signal $y(t) = x(a \\cdot t)$ introduced in the previous example. Original $x(t)$ is plotted in gray, $y(t)$ in blue. Here stretching is realized, such that $y(t)$ is twice as long as $x(t)$."
+    "The following example illustrates the temporal scaling of the staircase signal $y(t) = x(a \\cdot t)$ introduced in the previous example. The original $x(t)$ is plotted in gray, the scaled signal $y(t)$ in blue. Here stretching is realized, such that $y(t)$ is twice as long as $x(t)$."
    ]
   },
   {
@@ -158,8 +158,10 @@
     "a = .5\n",
     "y = x.subs(t, a*t)\n",
     "\n",
-    "px = sym.plot(x, (t, -3, 7), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False, line_color='gray')\n",
-    "py = sym.plot(y.subs(a, 1/2), (t, -3, 7), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False)\n",
+    "px = sym.plot(x, (t, -3, 7), ylim=[-0.2, 1.2],\n",
+    "              ylabel=r'$y(t)$', show=False, line_color='gray')\n",
+    "py = sym.plot(y.subs(a, 1/2), (t, -3, 7),\n",
+    "              ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False)\n",
     "px.extend(py)\n",
     "px.show()"
    ]
@@ -191,7 +193,7 @@
     "y(t) = x(\\tau - t)\n",
     "\\end{equation}\n",
     "\n",
-    "for $\\tau \\in \\mathbb{R}$. As $x(\\tau - t) = x(- (t - \\tau))$ the flipping operation can also be represented as a time-reversal of the signal $x(t)$ followed by a shift of $\\tau$ of the reversed signal. For $\\tau = 0$ this results in time-reversal of the signal only. \n",
+    "for $\\tau \\in \\mathbb{R}$. As $x(\\tau - t) = x(- (t - \\tau))$ the flipping operation can also be represented as a time-reversal of the signal $x(t)$ followed by a shift of $\\tau$ of the reversed signal. For $\\tau = 0$ this results in only a time-reversal of the signal. \n",
     "\n",
     "The temporal flipping operation can be interpreted geometrically as a mirroring of the signal $x(t)$ at the vertical axis $t=\\frac{\\tau}{2}$."
    ]
@@ -214,7 +216,8 @@
     "tau = -1\n",
     "y = x.subs(t, tau - t)\n",
     "\n",
-    "px = sym.plot(x, (t, -5, 5), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False, line_color='gray')\n",
+    "px = sym.plot(x, (t, -5, 5), ylim=[-0.2, 1.2],\n",
+    "              ylabel=r'$y(t)$', show=False, line_color='gray')\n",
     "py = sym.plot(y, (t, -5, 5), ylim=[-0.2, 1.2], ylabel=r'$y(t)$', show=False)\n",
     "px.extend(py)\n",
     "px.show()"
